--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,7 +54,7 @@
         <br>
 
         <div class="card mx-auto col-sm-6">
-            <form>
+            <form action="acceso.jsp" method="POST">
                 <div class="form-group">
                     <label for="exampleInputEmail1">Correo</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese un correo electronico">
