Se agrego los estilos de bootstrap, y se agrego las ligas de contacto a formulario.

--- a/src/main/webapp/ContactoForm.html
+++ b/src/main/webapp/ContactoForm.html
@@ -5,27 +5,78 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
+    <!-- URL: https://jsfiddle.net/Boltrology/tk9xc13v/show -->
     <head>
-        <h1>Contacto</h1>
-        <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <title>Simplex</title>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <meta name="robots" content="noindex, nofollow">
+        <meta name="googlebot" content="noindex, nofollow">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+        <script type="text/javascript" src="/js/lib/dummy.js"></script>
+
+        <link rel="stylesheet" type="text/css" href="/css/result-light.css">
+
+        <link rel="stylesheet" type="text/css" href="https://bootswatch.com/4/simplex/bootstrap.min.css">
+        <script type="text/javascript" src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
+        <script type="text/javascript" src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
+        <script type="text/javascript" src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+
+        <style id="compiled-css" type="text/css">
+            h1 {
+                text-align: center;
+            }
+
+        </style>
+
     </head>
     <body>
-        <form>
-    <div>
-        <label for="Nombre">Nombre completo:</label>
-        <input type="nombre" id="nombre" placeholder="Ingrese su nombre" />
-    </div>
-    <div>
-        <label for="Correo electronico">E-mail:</label>
-        <input type="email" id="mail"  placeholder="Ingrese su e- mail" />
-    </div>
-    <div>
-        <label for="Comentarios">Comentarios:</label>
-        <textarea id="comentarios"placeholder="Ingrese sus comentarios"></textarea>
-    </div>
-    <div class="button">
-        <button type="submit">Enviar</button>
-    </div>
-</form>
+        <h1>Simple Web Page</h1>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Menu principal</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ContactoForm.html">Contacto</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+
+        <br>
+
+        <div class="card mx-auto col-sm-6">
+            <form>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Nombre</label>
+                    <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Ingrese un nombre">
+
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">E-mail</label>
+                    <input type="password" class="form-control" placeholder="Clave">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Comentarios</label>
+                    <input type="text" class="form-control" placeholder="Esciriba sus comentarios">
+                </div>
+
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+        </div>
+
     </body>
 </html>
