--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,10 +38,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acceso</a>
+                        <a class="nav-link" href="ContactoForm.html">Contacto</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
